修改AI发音规则，现在流式推送发音